styles.css
html, body, img {
    margin: 0;
    padding: 0;
    font-family: 'Noto Sans', 'Sans Serif';
}

#holiday_popup{
    position:fixed;
    top:0;
    left:0;
    background:rgba(0,0,0,0.6);
    width:100%;
    height:100%;
    z-index:100;
}

.holiday_modal{
    margin:auto;
    width:600px;
    height:600px;
    display:flex;
    flex-direction:row;
    background:#b6f1f8;
    box-sizing: border-box;
    position:relative;
    z-index:2;
    color:#262629;
    top: calc(50vh - 300px);
}

.holiday_modal_text{
    width:450px;
    margin: auto;
    text-align:center;
    display:flex;
    flex-direction:column;
    align-items:center;
    height:485px;
}

.holiday_logo{
    height:34px;
    width:207px;
    margin-bottom:43px;
    margin-top:2px;
}

.holiday_sale{
    font-size:24px;
    line-height:33px;
    padding:0px 12px;
    background:white;
    letter-spacing: 0.48px;
    font-weight:bold;
    border:1px solid black;
}

.holiday_price{
    margin-top:-35px;
    margin-bottom:-46px;
}

.holiday_number{
    font-size:140px;
    letter-spacing: -2.8px;
    font-weight:bold;
}

.holiday_cent{
    font-size:70px;
    margin-left:-34px;
    font-weight:bold;
    position:relative;
    bottom:40px;
}

.holiday_week{
    font-weight:bold;
    font-size:30px;
    letter-spacing: -0.6px;
    margin-bottom:21px;
}

.holiday_unlimited{
    font-size:18px;
    line-height:30px;
    margin-bottom:29px;
    letter-spacing: -0.18px;
    line-height:28px;
    width:440px;
    font-weight:bold;
}

.holiday_subscribe{
    color:white;
    background:#262629;
    text-decoration:none;
    font-size:18px;
    font-weight:600px;
    letter-spacing:0.9px;
    padding: 12px 30px;
    border-radius:2px;
    margin-bottom:10px;
}

.holiday_subscribe:hover{
    text-decoration:none;
    color:white;
}

.holiday_cancel{
    color:#262629;
    font-size:14px;
    text-decoration:none;
    font-weight:bold;
    letter-spacing: -0.01px;
}

.holiday_cancel:hover{
    text-decoration:none;
    color:#262629;
}

#holiday_overlay{
    position: fixed;
    display: none; /* Hidden by default */ 
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0,0,0,0.5);
    z-index: 2;
    cursor: pointer;
}

@media screen and (max-width: 600px) {
    
    #holiday_popup{
        width:100vw;
    }

    .holiday_modal{
        width:300px;
        height:500px;
    }

    .holiday_modal_text{
        width:264px;
        height:424px;
    }

    .holiday_logo{
        height:20px;
        width:120px;
        margin-bottom:26px;
    }

    .holiday_number{
        font-size:120px;
        letter-spacing: -2.4px;
    }

    .holiday_price{
        margin-top:-32px;
        margin-bottom:-37px;
    }

    .holiday_cent{
        font-size:60px;
        bottom:35px;
        margin-left:-28px;
    }

    .holiday_sale{
        font-size:20px;
        line-height:29px;
        padding:0px 8px;
        letter-spacing: 0.4px;
    }

    .holiday_week{
        font-size:22px;
        letter-spacing: -0.44px;
    }
    
    .holiday_unlimited{
        font-size:16px;
        line-height:26px;
        width:264px;
        margin-bottom:28px;
        width:233px;
        letter-spacing: -0.16px;
    }

    .holiday_subscribe{
        font-size:14px;
        padding-left:40px;
        padding-right:40px;
        letter-spacing:0.7px;
        padding:10px 26px;
        padding-bottom:11px;
        margin-bottom:8px;
        line-height:19px;
    }

    .holiday_modal_text > a:hover{
        text-decoration:none;
    }

    .holiday_cancel{
        font-size:12px;
    }
}


@media screen and (max-width: 300px) {
    .holiday_modal{
        width:280px;
        height:500px;
    }
}

